# runtime

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/benchmark_model/: CMakeLists.txt
app/opencv_test/: CMakeLists.txt  main.cpp  test_elliipse.cpp  test_opencl.cpp  test_warp.cpp
app/synap_api_py/: .gitignore  CMakeLists.txt  export.cpp  export_postprocessor.cpp  export_preprocessor.cpp  export_tensor.cpp  export_types.cpp  pyproject.toml  setup.py
app/synap_api_py/synap/: __init__.py
app/synap_cli/: CMakeLists.txt  main.cpp
app/synap_cli_capi/: CMakeLists.txt  main.c
app/synap_cli_ic/: CMakeLists.txt  main.cpp
app/synap_cli_ic2/: CMakeLists.txt  main.cpp
app/synap_cli_info/: CMakeLists.txt  main.cpp
app/synap_cli_ip/: CMakeLists.txt  main.cpp
app/synap_cli_nb/: CMakeLists.txt  main.cpp
app/synap_cli_od/: CMakeLists.txt  main.cpp
app/synap_cli_od2/: CMakeLists.txt  main.cpp
app/synap_cli_rnn/: CMakeLists.txt  main.cpp
app/synap_cli_sr/: CMakeLists.txt  main.cpp
app/synap_cli_tflitec/: CMakeLists.txt  main.c
app/synap_init/: CMakeLists.txt  main.cpp
cmake/: arm-gnu-toolchain-aarch64.cmake
cmake/modules/: FindNCNN.cmake  FindNNA.cmake  FindOnnxruntime.cmake  FindOpenCV.cmake  FindTimVX.cmake  FindVSSDK.cmake  Findebg_utils.cmake  Findsynap_device.cmake  Findtensorflow_lite.cmake  Findtorq-runtime.cmake  parse_config.cmake
kernel/: CMakeLists.txt  Kbuild  Makefile  build.sh
kernel/src/: synap_kernel.c  synap_kernel.h  synap_kernel_ca.h  synap_kernel_ca_optee.c  synap_kernel_ca_tzk.c  synap_kernel_drv.c  synap_mem.c  synap_mem.h  synap_profile.c  synap_profile.h
lib/: CMakeLists.txt
lib/miniz/: CMakeLists.txt
lib/synap_app/: CMakeLists.txt
lib/synap_app/inc/synap/: arg_parser.hpp  label_info.hpp
lib/synap_app/src/: arg_parser.cpp  label_info.cpp
lib/synap_base/: CMakeLists.txt
lib/synap_base/inc/synap/: metadata.hpp  types.hpp
lib/synap_base/src/: metadata.cpp  types.cpp
lib/synap_capi/: CMakeLists.txt  cnetwork.cpp  cnetwork.h  synap_cnetwork.cpp  synap_cnetwork.h
lib/synap_device/: CMakeLists.txt  synap_device.c  synap_device.h  synap_device_simulator.cpp
lib/synap_img/: CMakeLists.txt
lib/synap_img/inc/synap/: image_convert.hpp  image_utils.hpp
lib/synap_img/src/: image_convert.cpp  image_utils.cpp
lib/synap_postprocess/: CMakeLists.txt
lib/synap_postprocess/inc/synap/: classifier.hpp  detector.hpp  image_postprocessor.hpp
lib/synap_postprocess/src/: classifier.cpp  detector.cpp  image_postprocessor.cpp  json_utils.cpp
lib/synap_preprocess/: CMakeLists.txt
lib/synap_preprocess/inc/synap/: input_data.hpp  preprocessor.hpp
lib/synap_preprocess/src/: input_data.cpp  preprocessor.cpp
lib/synap_utils/: CMakeLists.txt
lib/synap_utils/inc/synap/: bundle_parser.hpp  bundle_parser_dir.hpp  bundle_parser_zip.hpp  enum_utils.hpp  file_utils.hpp  logging.hpp  string_utils.hpp  timer.hpp  zip_tool.hpp
lib/synap_utils/src/: bundle_parser.cpp  bundle_parser_dir.cpp  bundle_parser_zip.cpp  file_utils.cpp  string_utils.cpp  zip_tool.cpp
lib/synapnb/: CMakeLists.txt
lib/synapnb/inc/synap/: allocator.hpp  buffer.hpp  buffer_cache.hpp  network.hpp  npu.hpp  tensor.hpp
lib/synapnb/src/: allocator.cpp  allocator_malloc.cpp  allocator_malloc.hpp  allocator_synap.cpp  allocator_synap.hpp  buffer.cpp  buffer_private.hpp  network.cpp  network_private.hpp  npu.cpp  predictor.hpp  predictor_bundle.cpp  predictor_bundle.hpp  predictor_ebg.cpp  predictor_ebg.hpp  predictor_onnx.cpp  predictor_onnx.hpp  predictor_tflite.cpp  predictor_tflite.hpp  predictor_torq.cpp  predictor_torq.hpp  quantization.cpp  quantization.hpp  synap_driver.cpp  synap_driver.hpp  tensor.cpp
